--- a/style/index.css
+++ b/style/index.css
@@ -144,3 +144,130 @@ body {
   line-height: 1.5;
   background: #aca1a1;
 }
+
+.name-header {
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  background-color: lightgrey;
+  color: white;
+}
+
+.name-header h1 {
+  display: flex;
+  font-size: 4rem;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: left;
+}
+
+.header-nav a {
+  border: 0.1rem solid white;
+  color: black;
+  text-decoration: none;
+  width: 15rem;
+  margin-bottom: 2rem;
+  color: white;
+  padding-left: 1rem;
+}
+
+.header-nav a:hover {
+  background-color: black;
+  color: white;
+}
+
+.info-container {
+  display: flex;
+  margin: 2rem 2rem;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: column wrap;
+  align-items: center;
+  text-align: center;
+  padding: 9rem;
+}
+
+.info h2 {
+  font-size: 3rem;
+  color: white;
+}
+
+.info a {
+  color: white;
+  text-decoration: none;
+  border: 0.1rem solid white;
+  padding: 1rem;
+}
+
+.info a:hover {
+  background-color: black;
+  color: white;
+}
+
+.my-projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+}
+
+.my-projects div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 5rem 5rem;
+  color: white;
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+  color: white;
+  background-color: lightgrey;
+  text-align: center;
+}
+
+.contact-me p {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.contact-me a {
+  color: white;
+  text-decoration: none;
+  border: 0.1rem solid white;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.contact-me a:hover {
+  background-color: black;
+  color: white;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+}
+
+.social a {
+  color: white;
+  text-decoration: none;
+  padding: 1rem;
+  margin-top: 2rem;
+  font-size: 5rem;
+  padding: 2rem;
+}
+
+.social a:hover {
+  background-color: black;
+  color: white;
+}
