--- a/style/index.css
+++ b/style/index.css
@@ -273,3 +273,54 @@ footer {
 }
 
 /* Media Queries */
+@media screen and (max-width: 800px) {
+  .name-header {
+    background: #aca1a1;
+  }
+  .name-header h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .header-nav {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+
+  .header-nav a {
+    text-align: center;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+
+  .info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .info-container img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .info a {
+    display: flex;
+    margin-top: 1rem;
+  }
+
+  .info p {
+    display: flex;
+    margin-top: 2rem;
+  }
+
+  footer {
+    background: #aca1a1;
+  }
+}
