--- a/style/index.css
+++ b/style/index.css
@@ -180,21 +180,25 @@ body {
 
 .info-container {
   display: flex;
+}
+
+.info-container .about-me-image {
   margin: 2rem 2rem;
+  max-width: 40rem;
 }
 
 .info {
   display: flex;
-  justify-content: space-around;
   flex-flow: column wrap;
   align-items: center;
   text-align: center;
-  padding: 9rem;
+  justify-content: center;
 }
 
 .info h2 {
   font-size: 3rem;
   color: white;
+  margin-bottom: 1rem;
 }
 
 .info a {
@@ -202,6 +206,7 @@ body {
   text-decoration: none;
   border: 0.1rem solid white;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .info a:hover {
@@ -275,27 +280,22 @@ footer {
 /* Media Queries */
 @media screen and (max-width: 800px) {
   .name-header {
-    background: #aca1a1;
-  }
-  .name-header h1 {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    align-items: center;
+    background: #aca1a1;
   }
 
   .header-nav {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2rem;
   }
 
   .header-nav a {
-    text-align: center;
-    width: 40%;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
+    margin: 0;
   }
 
   .info-container {
@@ -304,10 +304,9 @@ footer {
     justify-content: center;
   }
 
-  .info-container img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  .info-container .about-me-image {
+    display: flex;
+    margin: 2rem auto;
   }
 
   .info a {
@@ -322,5 +321,51 @@ footer {
 
   footer {
     background: #aca1a1;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .name-header {
+    display: flex;
+    align-items: center;
+    background-color: black;
+  }
+
+  .header-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .header-nav a {
+    margin: 0;
+  }
+
+  .info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .info-container .about-me-image {
+    display: flex;
+    margin: 2rem auto;
+  }
+
+  .info a {
+    display: flex;
+    margin-top: 1rem;
+  }
+
+  .info p {
+    display: flex;
+    margin-top: 2rem;
+  }
+
+  footer {
+    background-color: black;
   }
 }
