--- a/style/index.css
+++ b/style/index.css
@@ -278,7 +278,7 @@ footer {
 }
 
 /* Media Queries */
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   .name-header {
     display: flex;
     align-items: center;
@@ -324,7 +324,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .name-header {
     display: flex;
     align-items: center;
